@@ -15,7 +15,7 @@ This control allows the user to select a date. Unlike
 wxDatePickerCtrl is implemented as a small window showing the currently selected date.
 The control can be edited using the keyboard, and can also display a popup
 window for more user-friendly date selection, depending on the styles used and
-the platform.
+the platform, except PalmOS where date is selected using native dialog.
 
 It is only available if \texttt{wxUSE\_DATEPICKCTRL} is set to $1$.
 
